--- a/www/spel.html
+++ b/www/spel.html
@@ -50,47 +50,8 @@
     <main>
       <article>
         <section class="container">
-          <!--Spelare 1 -->
-          <div class="row mt-4">
-            <h3 class="col-12 col-md-8 col-lg-8 mx-auto">Spelare 1</h3>
-          </div>
-          <div class="row mt-2">
-            <div class="col-12 col-md-8 col-lg-8 mx-auto d-inline-flex">
-              <div class="col-10 m-0 p-0">
-                <input type="text" class="form-control" id="playerName1" aria-label="Spelare namn" placeholder="Spelare Namn">
-              </div>
-              <div class="col-2">
-                <select class="form-control" id="type1">
-                  <option>Human</option>
-                  <option>Robot</option>
-                </select>
-              </div>
-            </div>
-          </div>
-          <!--Spelare 2 -->
-          <div class="row mt-4">
-            <h3 class="col-12 col-md-8 col-lg-8 mx-auto">Spelare 2</h3>
-          </div>
-
-          <div class="row mt-2">
-            <div class="col-12 col-md-8 col-lg-8 mx-auto d-inline-flex">
-              <div class="col-10 m-0 p-0">
-                <input type="text" class="form-control" id="playerName2" aria-label="Spelare namn" placeholder="Spelare Namn">
-              </div>
-
-              <div class="col-2">
-                <select class="form-control" id="type2">
-                  <option>Human</option>
-                  <option>Robot</option>
-                </select>
-              </div>
-            </div>
-          </div>
-
-          <div class="row mt-4">
-            <div class="col-12 col-md-8 col-lg-8 mx-auto">
-              <a href="board.html" class="btn btn-primary float-left" id="btn-addPlayers">Starta</a>
-            </div>
+          <div class="spelpagecontent">
+            
           </div>
         </section>
       </article>
@@ -112,6 +73,7 @@
     <!-- Application specific JavaScript -->
     <script src="/js/classes/base.class.js"></script>
     <script src="/js/classes/frontpage.class.js"></script>
+    <script src="/js/classes/spelpage.class.js"></script>
     <script src="/js/classes/footer.class.js"></script>
     <script src="/js/classes/rulespage.class.js"></script>
     <script src="/js/classes/player.class.js"></script>
