--- a/www/winpop.html
+++ b/www/winpop.html
@@ -99,6 +99,7 @@
     <!-- Application specific JavaScript -->
     <script src="/js/classes/base.class.js"></script>
     <script src="/js/classes/frontpage.class.js"></script>
+    <script src="/js/classes/spelpage.class.js"></script>
     <script src="/js/classes/footer.class.js"></script>
     <script src="/js/classes/rulespage.class.js"></script>
     <script src="/js/classes/player.class.js"></script>
