--- a/www/score.html
+++ b/www/score.html
@@ -39,7 +39,7 @@
                   <a class="nav-link" href="rules.html">Spelregler</a>
                 </li>
                 <li class="nav-item active pl-5">
-                  <a class="nav-link" href="score.html">Score</a>
+                  <a class="nav-link" href="score.html">Resultat</a>
                 </li>
               </ul>
             </div>
