--- a/www/winpop.html
+++ b/www/winpop.html
@@ -73,7 +73,8 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Spela igen</button>
+                <a href="/board.html" role="button" class="btn btn-primary popover-test" title="Popover title" data-content="Popover body content is set in this attribute.">Spela igen</a>
+                <a href="/spel.html" role="button" class="btn btn-primary popover-test" title="Popover title" data-content="Popover body content is set in this attribute.">Byta spelare</a>
               </div>
             </div>
           </div>
