--- a/www/winpop.html
+++ b/www/winpop.html
@@ -72,7 +72,7 @@
 
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Stäng</button>
                 <button type="button" class="btn btn-primary">Spela igen</button>
               </div>
             </div>
