--- a/www/board.html
+++ b/www/board.html
@@ -119,6 +119,7 @@
   <script src="/js/classes/frontpage.class.js"></script>
   <script src="/js/classes/spelpage.class.js"></script>
   <script src="/js/classes/footer.class.js"></script>
+  <script src="/js/classes/winpop.class.js"></script>
   <script src="/js/classes/rulespage.class.js"></script>
   <script src="/js/classes/player.class.js"></script>
   <script src="/js/classes/game.class.js"></script>
