added winpop changes

--- a/www/board.html
+++ b/www/board.html
@@ -125,6 +125,7 @@
   <script src="/js/classes/score.class.js"></script>
   <script src="/js/classes/board.class.js"></script>
   <script src="/js/classes/app.class.js"></script>
+  <script src="/js/classes/winpop.class.js"></script>
   <script src="/js/main.js"></script>
 </body>
 
