changes with modal with the help of Thomas

--- a/www/index.html
+++ b/www/index.html
@@ -85,6 +85,7 @@
     <script src="/js/classes/player.class.js"></script>
     <script src="/js/classes/game.class.js"></script>
     <script src="/js/classes/board.class.js"></script>
+    <script src="/js/classes/winpop.class.js"></script>
     <script src="/js/classes/score.class.js"></script>
     <script src="/js/classes/app.class.js"></script>
     <script src="/js/main.js"></script>
