--- a/www/spel.html
+++ b/www/spel.html
@@ -51,7 +51,7 @@
       <article>
         <section class="container">
           <div class="spelpagecontent">
-            
+
           </div>
         </section>
       </article>
@@ -79,6 +79,7 @@
     <script src="/js/classes/player.class.js"></script>
     <script src="/js/classes/board.class.js"></script>
     <script src="/js/classes/game.class.js"></script>
+    <script src="/js/classes/winpop.class.js"></script>
     <script src="/js/classes/score.class.js"></script>
     <script src="/js/classes/app.class.js"></script>
     <script src="/js/main.js"></script>
