--- a/www/rules.html
+++ b/www/rules.html
@@ -76,6 +76,7 @@
 	<script src="/js/classes/rulespage.class.js"></script>
 	<script src="/js/classes/player.class.js"></script>
 	<script src="/js/classes/board.class.js"></script>
+	<script src="/js/classes/winpop.class.js"></script>
 	<script src="/js/classes/game.class.js"></script>
 	<script src="/js/classes/score.class.js"></script>
 	<script src="/js/classes/app.class.js"></script>
