--- a/www/board.html
+++ b/www/board.html
@@ -1,110 +1,85 @@
 <!DOCTYPE html>
 <html lang="sv">
-
 <head>
   <title>4 i rad</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <!-- Application specific CSS -->
   <!-- <link rel="stylesheet" href="box-sizing.css"> -->
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/board.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-  <header>
-    <div class="container-fluid p-0">
-      <div class="row">
-        <nav class="col ml-3 navbar navbar-expand-lg navbar-dark bg-secondary">
-          <h1>4 i rad</h1>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse ml-5" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item active pl-5">
-                <a class="nav-link" href="/">Start
-                  <span class="sr-only">(current)</span>
-                </a>
-              </li>
-              <li class="nav-item pl-5">
-                <a class="nav-link" href="spel.html">Spela</a>
-              </li>
-              <li class="nav-item pl-5">
-                <a class="nav-link" href="rules.html">Spelregler</a>
-              </li>
-              <li class="nav-item pl-5">
-                <a class="nav-link" href="score.html">Score</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+  <header class="fixed-top bg-red">
+    <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand" href="#">
+        <img class="img-fluid img-brand" src="/img/logo.svg" alt="">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item ">
+            <a class="nav-link btn-red-nav mr-2" href="/">Start
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn-red-nav mr-2 active" href="spel.html">Spela</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn-red-nav mr-2" href="rules.html">Spelregler</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn-red-nav mr-2" href="score.html">Resultat</a>
+          </li>
+        </ul>
       </div>
-    </div>
+    </nav>
   </header>
-  <main>
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h4 class="py-2 text-center playerTurn"></h4>
+  <main class="content">
+    <article class="content-inside">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h4 class="py-2 text-center playerTurn"></h4>
+          </div>
         </div>
-      </div>
-
-      <!-- Button trigger modal -->
-      <div class="col-12 text-center mt-3 mb-4">
-        <button type="button" class="btn text-white font-weight-bold cancel-button" data-toggle="modal" data-target="#exampleModal">
-          Avbryta spelet
-        </button>
-      </div>
-
-      <!-- Modal -->
-      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <!-- <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Avbryta Spelet</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
+        <!-- Button trigger modal -->
+        <div class="col-12 text-center">
+          <button type="button" class="btn btn-red" data-toggle="modal" data-target="#exampleModal">
+            Avbryta spelet
           </button>
-        </div> -->
-            <div class="modal-body my-3 font-weight-bold">
-              Vill du verkligen avbryta spelet?
-            </div>
-            <div class="modal-footer mx-3cancel-modal">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Stäng</button>
-              <a href="/" role="button" class="btn btn-primary popover-test" title="Popover title" data-content="Popover body content is set in this attribute.">Ja</a>
+        </div>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-body my-3 font-weight-bold">
+                Vill du verkligen avbryta spelet?
+              </div>
+              <div class="modal-footer mx-3cancel-modal">
+                <button type="button" class="btn btn-red" data-dismiss="modal">Stäng</button>
+                <a href="/" role="button" class="btn btn-red popover-test" title="Popover title" data-content="Popover body content is set in this attribute.">Ja</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-
-
-      <div class="board-holder">
-        <div class="board">
+        <div class="board-holder">
+          <div class="board">
+          </div>
         </div>
       </div>
-      <!-- <div class="board"><div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
--->
-
-
-
-
-
-    </div>
-
-
+    </article>
   </main>
-  <footer>
-    <div class="container-fluid">
-      <div class="footer-content">
+  <footer class="footer bg-red">
 
-      </div>
-    </div>
   </footer>
 
 
@@ -125,7 +100,6 @@
   <script src="/js/classes/score.class.js"></script>
   <script src="/js/classes/board.class.js"></script>
   <script src="/js/classes/winpop.class.js"></script>
-  <script src="/js/classes/app.class.js"></script>
   <script src="/js/main.js"></script>
 </body>
 
