Auto stash before merge of "master" and "origin/master"

--- a/www/board.html
+++ b/www/board.html
@@ -15,13 +15,13 @@
 
 <body>
   <header class="fixed-top bg-red">
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-md w-100">
       <a class="navbar-brand" href="#">
-        <img class="img-fluid img-brand" src="/img/logo.svg" alt="">
+        <img class="img-brand" src="/img/logo.svg" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
         aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"><i class="fa fa-bars text-light-grey" aria-hidden="true"></i></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
