har en skapat header class

--- a/www/rules.html
+++ b/www/rules.html
@@ -13,47 +13,18 @@
 </head>
 
 <body>
-	<header class="fixed-top bg-red">
-    <nav class="navbar navbar-expand-md w-100">
-      <a class="navbar-brand" href="#">
-        <img class="img-brand" src="/img/logo.svg" alt="">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"><i class="fa fa-bars text-light-grey" aria-hidden="true"></i></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item ">
-            <a class="nav-link btn-red-nav mr-2" href="/">Start
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link btn-red-nav mr-2" href="spel.html">Spela</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link btn-red-nav mr-2 active" href="rules.html">Spelregler</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link btn-red-nav mr-2" href="score.html">Resultat</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
 
+	<header class="fixed-top bg-red">
+  </header>
 
 	<main class="content">
 		<article class="">
 			<div class="rulespagecontent">
-
 			</div>
 		</article>
 	</main>
 
 	<footer class="footer bg-red">
-
   </footer>
 
 
@@ -66,6 +37,7 @@
 	<script src="/js/classes/base.class.js"></script>
 	<script src="/js/classes/frontpage.class.js"></script>
     <script src="/js/classes/spelpage.class.js"></script>
+    <script src="/js/classes/header.class.js"></script>
 	<script src="/js/classes/footer.class.js"></script>
 	<script src="/js/classes/rulespage.class.js"></script>
 	<script src="/js/classes/player.class.js"></script>
