--- a/www/winpop.html
+++ b/www/winpop.html
@@ -17,51 +17,21 @@
   </head>
 
   <body>
+    
     <header>
-      <div class="container-fluid p-0">
-        <div class="row">
-          <nav class="col ml-3 navbar navbar-expand-lg navbar-dark bg-secondary">
-            <h1>4 i rad</h1>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-              aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse ml-5" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item active pl-5">
-                  <a class="nav-link" href="/">Start
-                    <span class="sr-only">(current)</span>
-                  </a>
-                </li>
-                <li class="nav-item pl-5">
-                  <a class="nav-link" href="spel.html">Spela</a>
-                </li>
-                <li class="nav-item pl-5">
-                  <a class="nav-link" href="rules.html">Spelregler</a>
-                </li>
-                <li class="nav-item pl-5">
-                  <a class="nav-link" href="hiscore.html">HiScore</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
-      </div>
     </header>
 
     <main class="start-page mt-2 mt-4 ml-5">
-
       <div class="container-fluid">
-        <div class="winpop-content">
-          
+        <div class="winpop-content">         
         </div>        
       </div>
 
     </main>
+
     <footer>
       <div class="container-fluid">
       <div class="footer-content">
-
         </div>
       </div>
     </footer>
@@ -77,6 +47,7 @@
     <script src="/js/classes/base.class.js"></script>
     <script src="/js/classes/frontpage.class.js"></script>
     <script src="/js/classes/spelpage.class.js"></script>
+    <script src="/js/classes/header.class.js"></script>
     <script src="/js/classes/footer.class.js"></script>
     <script src="/js/classes/winpop.class.js"></script>
     <script src="/js/classes/rulespage.class.js"></script>
