uppdaterat lite css

--- a/www/score.html
+++ b/www/score.html
@@ -18,7 +18,7 @@
     </header>
 
     <main class="content">
-      <article class="content-inside">
+      <article class="content-inside mt-4">
         <div class="score-list">
         </div>
       </article>
