--- a/www/winpop.html
+++ b/www/winpop.html
@@ -17,8 +17,8 @@
   </head>
 
   <body>
-    
     <header>
+      <div class="container-fluid p-0">
     </header>
 
     <main class="start-page mt-2 mt-4 ml-5">
