update av dator spelare, column problem.

--- a/www/score.html
+++ b/www/score.html
@@ -18,12 +18,12 @@
     </header>
 
     <main class="content">
-      <article class="content-inside mt-4">
+      <article class="content-inside mt-4 mb-4">
         <div class="score-list">
         </div>
       </article>
     </main>
-    
+
     <footer class="footer bg-red">
     </footer>
 
