Auto stash before merge of "master" and "origin/master"
Skapat draw klass

--- a/www/board.html
+++ b/www/board.html
@@ -74,6 +74,7 @@
   <script src="/js/classes/score.class.js"></script>
   <script src="/js/classes/board.class.js"></script>
   <script src="/js/classes/winpop.class.js"></script>
+  <script src="/js/classes/drawpop.class.js"></script>
   <script src="/js/main.js"></script>
 </body>
 
