--- a/www/rules.html
+++ b/www/rules.html
@@ -43,6 +43,7 @@
 	<script src="/js/classes/winpop.class.js"></script>
 	<script src="/js/classes/game.class.js"></script>
 	<script src="/js/classes/score.class.js"></script>
+	<script src="/js/classes/drawpop.class.js"></script>
 	<script src="/js/main.js"></script>
 </body>
 
