--- a/www/winpop.html
+++ b/www/winpop.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <html lang="sv">
 
+
   <head>
     <title>4 i rad</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <!-- Bootstrap CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Emilys+Candy" rel="stylesheet">
     <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <!-- Application specific CSS -->
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/main.css">
+
   </head>
 
   <body>
-    <header class="fixed-top bg-red">
+    <header>
+      <div class="container-fluid p-0">
     </header>
-    <main class="content">
-      <article class="content-inside">
-        <div class="frontpagecontent">
-        </div>
-      </article>
+
+    <main class="start-page mt-2 mt-4 ml-5">
+      <div class="container-fluid">
+        <div class="winpop-content">         
+        </div>        
+      </div>
+
     </main>
-    <footer class="footer bg-red">
+
+    <footer>
+      <div class="container-fluid">
+      <div class="footer-content">
+        </div>
+      </div>
     </footer>
+
+
     <!-- JavaScript libraries -->
     <script src="/jsonflex.js"></script>
     <script src="/js/libs/jquery-3.2.1.js"></script>
@@ -29,18 +44,20 @@
     <script src="/js/libs/bootstrap-4-beta.js"></script>
     <!-- Application specific JavaScript -->
     <!-- Application specific JavaScript -->
-    
+    <script src="/js/classes/base.class.js"></script>
     <script src="/js/classes/frontpage.class.js"></script>
     <script src="/js/classes/spelpage.class.js"></script>
     <script src="/js/classes/header.class.js"></script>
     <script src="/js/classes/footer.class.js"></script>
+    <script src="/js/classes/winpop.class.js"></script>
     <script src="/js/classes/rulespage.class.js"></script>
     <script src="/js/classes/player.class.js"></script>
     <script src="/js/classes/game.class.js"></script>
     <script src="/js/classes/board.class.js"></script>
-    <script src="/js/classes/winpop.class.js"></script>
-    <script src="/js/classes/score.class.js"></script>
+    <script src="/js/classes/hiscore.class.js"></script>
+    <script src="/js/classes/app.class.js"></script>
     <script src="/js/classes/drawpop.class.js"></script>
     <script src="/js/main.js"></script>
   </body>
+
 </html>
