Board responsivness fixed

--- a/www/board.html
+++ b/www/board.html
@@ -19,7 +19,7 @@
 
   <main class="content">
     <article class="content-inside">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-12">
             <h4 class="py-2 text-center playerTurn"></h4>
