--- a/www/score.html
+++ b/www/score.html
@@ -1,33 +1,25 @@
 <!DOCTYPE html>
 <html lang="sv">
-
   <head>
     <title>4 i rad</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-
     <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
   	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <!-- Application specific CSS -->
   	<link rel="stylesheet" href="/css/style.css">
-
   </head>
-
   <body>
     <header class="fixed-top bg-red">
     </header>
-
     <main class="content">
       <article class="content-inside mt-4 mb-4">
         <div class="score-list">
         </div>
       </article>
     </main>
-
     <footer class="footer bg-red">
     </footer>
-
-
     <!-- JavaScript libraries -->
     <script src="/jsonflex.js"></script>
     <script src="/js/libs/jquery-3.2.1.js"></script>
