--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <!-- Application specific CSS -->
     <link rel="stylesheet" href="/css/style.css">
   </head>
 
@@ -29,7 +30,7 @@
     <script src="/js/libs/bootstrap-4-beta.js"></script>
     <!-- Application specific JavaScript -->
     <!-- Application specific JavaScript -->
-    
+
     <script src="/js/classes/frontpage.class.js"></script>
     <script src="/js/classes/spelpage.class.js"></script>
     <script src="/js/classes/header.class.js"></script>
