Ändrat små grejer som påpekades vid presentationen

--- a/www/board.html
+++ b/www/board.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
 
-<<<<<<< Updated upstream
+
   <body>
     <header class="fixed-top bg-red">
     </header>
@@ -39,7 +39,7 @@
                   Vill du verkligen avbryta spelet?
                 </div>
                 <div class="modal-footer mx-3cancel-modal">
-                  <button type="button" class="btn btn-red" data-dismiss="modal">Stäng</button>
+                  <button type="button" class="btn btn-red" data-dismiss="modal">Nej</button>
                   <a href="/" role="button" class="btn btn-red popover-test" title="Popover title" data-content="Popover body content is set in this attribute.">Ja</a>
                 </div>
               </div>
