--- a/www/score.html
+++ b/www/score.html
@@ -1,43 +1,48 @@
 <!DOCTYPE html>
 <html lang="sv">
-  <head>
-    <title>4 i rad</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
-  	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <!-- Application specific CSS -->
-  	<link rel="stylesheet" href="/css/style.css">
-  </head>
-  <body>
-    <header class="fixed-top bg-red">
-    </header>
-    <main class="content">
-      <article class="content-inside mt-4 mb-4">
+
+<head>
+  <title>4 i rad</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+    crossorigin="anonymous">
+  <!-- Application specific CSS -->
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
+  <header class="fixed-top bg-red">
+  </header>
+  <main class="content">
+    <article class="content-inside mt-4 mb-4">
+      <section class="container">
         <div class="score-list">
         </div>
-      </article>
-    </main>
-    <footer class="footer bg-red">
-    </footer>
-    <!-- JavaScript libraries -->
-    <script src="/jsonflex.js"></script>
-    <script src="/js/libs/jquery-3.2.1.js"></script>
-    <script src="/js/libs/popper-1.11.0.js"></script>
-    <script src="/js/libs/bootstrap-4-beta.js"></script>
-    <!-- Application specific JavaScript -->
-    <script src="/js/classes/frontpage.class.js"></script>
-    <script src="/js/classes/spelpage.class.js"></script>
-    <script src="/js/classes/header.class.js"></script>
-    <script src="/js/classes/footer.class.js"></script>
-    <script src="/js/classes/rulespage.class.js"></script>
-    <script src="/js/classes/player.class.js"></script>
-    <script src="/js/classes/board.class.js"></script>
-    <script src="/js/classes/game.class.js"></script>
-    <script src="/js/classes/winpop.class.js"></script>
-    <script src="/js/classes/score.class.js"></script>
-    <script src="/js/classes/drawpop.class.js"></script>
-    <script src="/js/main.js"></script>
-  </body>
+      </section>
+    </article>
+  </main>
+  <footer class="footer bg-red">
+  </footer>
+  <!-- JavaScript libraries -->
+  <script src="/jsonflex.js"></script>
+  <script src="/js/libs/jquery-3.2.1.js"></script>
+  <script src="/js/libs/popper-1.11.0.js"></script>
+  <script src="/js/libs/bootstrap-4-beta.js"></script>
+  <!-- Application specific JavaScript -->
+  <script src="/js/classes/frontpage.class.js"></script>
+  <script src="/js/classes/spelpage.class.js"></script>
+  <script src="/js/classes/header.class.js"></script>
+  <script src="/js/classes/footer.class.js"></script>
+  <script src="/js/classes/rulespage.class.js"></script>
+  <script src="/js/classes/player.class.js"></script>
+  <script src="/js/classes/board.class.js"></script>
+  <script src="/js/classes/game.class.js"></script>
+  <script src="/js/classes/winpop.class.js"></script>
+  <script src="/js/classes/score.class.js"></script>
+  <script src="/js/classes/drawpop.class.js"></script>
+  <script src="/js/main.js"></script>
+</body>
 
 </html>
